[tool.poetry]
name = "cacheme"
version = "0.2.2"
description = "async caching framework"
authors = ["Yiling-J <njjyl723@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.4"
pydantic = "^1.10.4"
typing-extensions = "^4.4.0"
cacheme-utils = "^0.1.2"
redis = { version = "^4.4.2", optional = true }
motor = { version = "^3.1.1", optional = true }
aiomysql = { version = "^0.1.1", optional = true }
asyncpg = { version = "^0.27.0", optional = true }

[tool.poetry.group.dev.dependencies]
msgpack = "^1.0.4"
pydantic = "^1.10.4"
typing-extensions = "^4.4.0"
cacheme-utils = "^0.1.1"
pytest = "^7.2.1"
pytest-asyncio = "^0.20.3"
pytest-benchmark = "^4.0.0"
redis = "^4.4.2"
types-redis = "^4.4.0.3"
motor = "^3.1.1"
aiomysql = "^0.1.1"
asyncpg = "^0.27.0"
mypy = "^0.991"

[tool.poetry.extras]
redis = ["redis"]
aiomysql = ["aiomysql"]
motor = ["motor"]
asyncpg = ["asyncpg"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
